# htcm-cpp

./: .replit  CMakeLists.txt  Makefile  buff_removes.json  buff_removes2.json  replit.nix  report.ps1
data/: 20230605-195519.zevtc
doc/: readme.txt  writeencounter.cpp.bak
lib/zlib-1.2.13/: Makefile  example  example64  minigzip  minigzip64
src/: Agent.h  BinaryReader.cpp  BinaryReader.h  Encounter.cpp  Encounter.h  Event.h  Loader.cpp  Loader.h  MemoryStream.h  Phase.h  Skill.h  Stream.h  evtc.h  json.h  main.cpp  zip.h
